--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
         <title>Dashboard | Minecraft Server Control</title>
     </head>
     <body>
-        <div class="box" id="box">
+        <div class="box" id="box" data-eula="<%- eula %>">
             <div class="server-list">
                 <h1>Servers</h1>
                 <br>
