--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,6 +9,12 @@
     }
 }
 
+@media (max-width: 400px){
+	.box {
+		width: auto !important;
+	}
+}
+
 *,
 *::before,
 *::after {
@@ -26,7 +32,12 @@ body {
 	color: var(--color-text);
 }
 
-h6, h5, h4, h3, h2, h1 {
+h6,
+h5,
+h4,
+h3,
+h2,
+h1 {
     margin: 0;
     font-weight: 500;
     line-height: 1;
@@ -160,7 +171,8 @@ h6, h5, h4, h3, h2, h1 {
 	box-shadow: .2rem .2rem .2rem var(--color-shadow);
 }
 
-.btn:hover {
+.btn:hover,
+.btn:focus {
 	box-shadow: 0rem 0rem 2px var(--color-shadow);
 	transform: translateY(.1rem);
 	background-color: var(--color-button-hover);
@@ -195,12 +207,12 @@ input[type=text] {
 	height: 2rem;
 }
 
-@keyframes spin{
-    from{  transform: rotateZ(0deg)   }
-    to  {  transform: rotateZ(360deg) }
+@keyframes spin {
+    from { transform: rotateZ(0deg) }
+    to { transform: rotateZ(360deg) }
 }
 
-@keyframes fade{
-    from{  opacity: 0;   }
-    to  {  opacity: 1; }
+@keyframes fade {
+    from { opacity: 0; }
+    to { opacity: 1; }
 }
