--- a/static/css/style.css
+++ b/static/css/style.css
@@ -100,7 +100,7 @@ h1 {
 	padding-top: 1rem;
 }
 
-.modal-dialog{
+.modal-dialog {
 	width: 100%;
 }
 
@@ -167,7 +167,7 @@ h1 {
 
 .btn:hover,
 .btn:focus {
-	box-shadow: 0rem 0rem 2px var(--color-shadow);
+	box-shadow: 0 0 2px var(--color-shadow);
 	transform: translateY(.1rem);
 	background-color: var(--color-button-hover);
 }
@@ -202,8 +202,8 @@ input[type=text] {
 }
 
 @keyframes spin {
-    from { transform: rotateZ(0deg) }
-    to { transform: rotateZ(360deg) }
+    from { transform: rotateZ(0deg); }
+    to { transform: rotateZ(360deg); }
 }
 
 @keyframes fade {
@@ -211,7 +211,7 @@ input[type=text] {
     to { opacity: 1; }
 }
 
-@media (max-width: 400px){
+@media (max-width: 400px) {
 	.box {
 		width: auto;
 	}
