--- a/static/css/style.css
+++ b/static/css/style.css
@@ -54,7 +54,7 @@ h1 {
 	margin: auto;
 	margin-top: 10px;
 	padding: 20px;
-	background-color: #1b1b1b;
+	background-color: var(--color-box-background);
 	border-radius: 12px;
 }
 
