Add server page

--- a/static/css/colors.css
+++ b/static/css/colors.css
@@ -20,6 +20,6 @@
     --color-button-danger-hover: #670000;
     --color-button-danger-active: #a24a4a;
     --color-form-control-border-focus: #08a;
-    --color-arrow-hover: #6767ca;
+    --color-link: #6767ca;
     --color-server-item-background: #223;
 }
