--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -137,3 +137,45 @@
 .server-status-running .start-server {
 	display: none;
 }
+
+.server-status-error .server-status:focus:after {
+	content: 'Crash during installation';
+}
+
+.server-status-running .server-status:focus:after {
+	content: 'Server is currently running';
+}
+
+.server-status-stopped .server-status:focus:after {
+	content: 'Server is currently stopped';
+}
+
+.server-status-crash .server-status:focus:after {
+	content: 'Server has crashed';
+}
+
+.server-status-creating .server-status:focus:after {
+	content: 'Server is currently beeing installed';
+}
+
+.server-item .server-status:focus:after {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translateX(-50%) translateY(-50%);
+	background-color: black;
+	color: white;
+	font-size: medium;
+	padding: 20px;
+	border-radius: 20px;
+	z-index: 5;
+}
+
+.server-status:focus {
+	color: var(--color-link);
+}
+
+.iconify:hover,
+.iconify:focus {
+	color: var(--color-link);
+}
