--- a/views/server.ejs
+++ b/views/server.ejs
@@ -49,6 +49,7 @@
                 <% } if(server.software === "Paper") { %>
                     <a href="plugins" tabindex="-1"><input class="btn" type="button" value="Plugins"></a>
                 <% } %>
+                <a href="config" tabindex="-1"><input class="btn" type="button" value="Config"></a>
             </form>
         </div>
         <div id="console">
